0024187: Wrong result of COMMON operation. In the function   void BOPAlgo_Builder::FillInternalShapes() added treatment for the arguments of type COMPOUND.

Adding test case for issue CR24187